--- a/API/package.json
+++ b/API/package.json
@@ -18,6 +18,7 @@
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1",
     "swagger-autogen": "^2.21.5"
   }
